[package]
name = "glin-client"
description = "Network connection and RPC operations for GLIN Network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Local dependencies
glin-types = { version = "0.1.0", path = "../glin-types" }

# Substrate & RPC
subxt = { workspace = true }
subxt-signer = { workspace = true }
subxt-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
