[package]
name = "glin-indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Blockchain indexing utilities for GLIN Network - helpers for block streaming, event decoding, and extrinsic parsing"

[dependencies]
# GLIN SDK dependencies
glin-client = { version = "0.2", path = "../glin-client" }
glin-types = { version = "0.2", path = "../glin-types" }

# Substrate interaction
subxt.workspace = true
subxt-core.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# SCALE codec
scale.workspace = true
scale-info.workspace = true

# Utilities
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
sp-core-hashing.workspace = true

[dev-dependencies]
tokio-test = "0.4"
