[package]
name = "glin-types"
description = "Shared types and data structures for GLIN Network SDK"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["glin", "substrate", "types", "codec", "scale"]
categories.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# SCALE encoding
scale = { workspace = true }
scale-info = { workspace = true }

# Substrate types
subxt = { workspace = true }
hex = { workspace = true }
